Closed Bug 120616 Opened 23 years ago Closed 23 years ago

[PATCH]Scaling in print preview shouldn't scale the scrollbars

Categories

(Core :: Print Preview, defect)

x86
Windows 2000
defect
Not set
normal

Tracking

()

VERIFIED FIXED
mozilla1.0

People

(Reporter: samir_bugzilla, Assigned: rods)

References

Details

(Whiteboard: [adt2 RTM])

Attachments

(1 file, 2 obsolete files)

Steps to reproduce: ------------------- (1) Navigate to a long page. (2) Preview the page: ``File | Print Preview''. Notice that the scrollbars are normal size. (3) Reload the page to exit preview mode. (4) Open the page setup dialog: ``File | Page Setup...''. (5) Set the scale to say 50. (6) Preview the document again: ``File | Preview''. Actual results: --------------- The scrollbars have scaled to 50% width along with the contents of the page (affects both horizontal and vertical scrollbars). Expected results: ----------------- The scrollbars should remain normal size and not scale with the document contents.
Don, we talked about this. I will assign this to you for now. You said you would take a look at this.
Target Milestone: --- → mozilla0.9.9
I think Rod meant to reassign.
Assignee: rods → dcone
Changing severity form minor to normal. This is a very visible defect for anyone using scaling.
Severity: minor → normal
Marking nsbeta1+
Really marking nsbeta1+ this time.
Keywords: nsbeta1+
*** Bug 126809 has been marked as a duplicate of this bug. ***
Changing component from printing to print preview.
Component: Printing → Print Preview
Moving to 1.0 this is not a stopper for 0.9.9
Target Milestone: mozilla0.9.9 → mozilla1.0
*** Bug 129309 has been marked as a duplicate of this bug. ***
cc: jimmylee, he sees this also...
I also noticed something strange after significantly scalling the page, and grabbitn the scroll bar and putting it all the way to the bottom and dropping it there. When you goto pick it back up you have the move the mouse for a good distance before it starts to move the scroll bar back up.
taking
Assignee: dcone → rods
Attached patch patch (obsolete) — Splinter Review
Overview There are several problems when trying to scale the UI and document scrollbars differently: 1) They currently share the same style context resolution 2) It can be difficult to determine whether you are creating/reflowing a UI or doc scrollbar (SB) 3) They share the same PresContext which has a single scale value that UI SBs need to ignore, but the doc SBs need to use. This patch does the following: 1) Enables the PrintPreviewContext to turn on and of the scaling of twips 2) When creating a new scrollbar, it checks to see if the frame parent is is a viewportframe that way it knows if it is in the UI or in the document then for UI scrollbars it turns off the saling, and for doc scrollbars it turns it on. This needs to be done at creation time as well as, reflow because it GetScaledPixelsToTwips get called during both. 3) The nsSimpleSequenceFrame turns on scaling during its children reflow then turns it off. 4) When PrintPreview "setup" is done it turns off the scaling in the PrintPreviewContext because any reflowing other usages for GetScaledPixelsToTwips will be for UI scrollbars 5) A copy of all the style rules for scrollbars is made and placed inside of a media type "print" This way the style resultion for the scaled scrollbars in the document are not shared with the UI.
Status: NEW → ASSIGNED
Keywords: review
Summary: Scaling in print preview shouldn't scale the scrollbars → [FIX]Scaling in print preview shouldn't scale the scrollbars
Summary: [FIX]Scaling in print preview shouldn't scale the scrollbars → [PARTIAL-FIX]Scaling in print preview shouldn't scale the scrollbars
Keywords: review
adt3 per adt triage
Whiteboard: [adt3]
Summary: [PARTIAL-FIX]Scaling in print preview shouldn't scale the scrollbars → [PATCH][PARTIAL-FIX]Scaling in print preview shouldn't scale the scrollbars
I disagree with the [adt3] marking. I'm bumping it up to [adt2]. This bug is *very visible* to a large number of users. Every person who uses print preview will notice this bug, since it affects the scrollbar and it has a negative impact on the perceived quality of print preview.
Whiteboard: [adt3] → [adt2]
in bug 137897 reporter writes "Scrollbar keps halving (sp?) it's own width until it is 1 pixel wide, then Mozilla crashes" (TB5285847Z)
Attached patch patch (obsolete) — Splinter Review
This patch is the same as the previous one except that it sets the DC's CanonicalPixelScale back to it's orignal value.
Attachment #74722 - Attachment is obsolete: true
Comment on attachment 80065 [details] [diff] [review] patch r=dcone
Attachment #80065 - Flags: review+
Summary: [PATCH][PARTIAL-FIX]Scaling in print preview shouldn't scale the scrollbars → [PATCH]Scaling in print preview shouldn't scale the scrollbars
*** Bug 138722 has been marked as a duplicate of this bug. ***
We need to have the native scrollbars scale also (for listboxes)
Attachment #80065 - Attachment is obsolete: true
Attachment #80238 - Flags: review+
Comment on attachment 80238 [details] [diff] [review] patch with gfx changes r=dcone
Comment on attachment 80238 [details] [diff] [review] patch with gfx changes sr=attinasi
Attachment #80238 - Flags: superreview+
fixed
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Keywords: adt1.0.0
verified in 4/24 trunk build.
Status: RESOLVED → VERIFIED
Comment on attachment 80238 [details] [diff] [review] patch with gfx changes a=scc (on behalf of drivers) for checkin to the mozilla 1.0 branch
Attachment #80238 - Flags: approval+
Let's get this one in, right after we certify for MachV beta adt1.0.0-/[adt2 rtm].
Keywords: adt1.0.0adt1.0.0-
Whiteboard: [adt2] → [adt2 RTM]
*** Bug 137085 has been marked as a duplicate of this bug. ***
*** Bug 140699 has been marked as a duplicate of this bug. ***
*** Bug 142859 has been marked as a duplicate of this bug. ***
adding adt1.0.0+. Please get drivers approval since the previous approval is more than 3 days old and then checkin to the 1.0 branch.
Keywords: adt1.0.0-adt1.0.0+
*** Bug 144497 has been marked as a duplicate of this bug. ***
re-a=chofmann for the 1.0 branch.
Keywords: fixed1.0.0
verified in 5/17 branch build.
Keywords: verified1.0.0
*** Bug 145990 has been marked as a duplicate of this bug. ***
*** Bug 137897 has been marked as a duplicate of this bug. ***
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: