Make the UI scrollbars now scale in PrintPreview. We are having to do all this rather bizarre stuff because the scrollbars in the document share all the same code and style contexts of the UI scrollbars Bug 120616 r=dcone sr=attinasi